refactor: new project structure with react router for a SPA

--- a/src/index.css
+++ b/src/index.css
@@ -1,104 +1,8 @@
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;       
-  height: 100vh;             
-  margin: 0;                 
-  background: #654ea3;
-  background: -webkit-linear-gradient(to right, #eaafc8, #654ea3);
-  background: linear-gradient(to right, #eaafc8, #654ea3);
-}
-
-.login-section{
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 500px;
-  height: 500px;
-}
-
-.login-icon {
-  position: absolute;
-  text-align: center;
-  width: 100px;
-  height: 100px;
-  line-height: 100px;
-  top: 5dvh;
-  left: 23dvh;
-  z-index: 100;
-  background-color: azure;
-  border-radius: 80%;
-}
-
-.login-icon img {
-    vertical-align: middle;
-    display: inline-block;
-    width: 100px;
-}
-
-.login-container {
-  background: rgba(255, 255, 255, 0.25);
-  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37); 
-  backdrop-filter: blur(8px);
-  -webkit-backdrop-filter: blur(8px);
-  border-radius: 24px;
-  border: 1px solid rgba(255, 255, 255, 0.18);
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 400px;
-  height: 300px;
-}
-
-.input-container{
-  margin: 20px 0 0 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
-.input-field{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: stretch;
-  height: 30px;         
-}
-
-.input-field input{
-  height: 100%;       
-  box-sizing: border-box;
-}
-
-.input-icon img{
-  width: 30px;
-  background-color: gray;
-}
-
-.footer-login {
-  background: rgba(255, 255, 255, 0.15);
-  box-shadow: 0 4px 24px 0 rgba(31, 38, 135, 0.17);
-  width: 60%;
-  height: 70px;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  border-radius: 0 0 24px 24px;
-  margin-top: -10px;
-}
-
-.footer-login button{
-  background-color: transparent;
-  color: #1b1c1d;
-  padding: 10px 20px;
-  font-weight: bold;
-  font-size: 20px;
-  border: 0;
-  cursor: pointer;
+html, body, #root {
+    width: 100vw;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    overflow: hidden;
 }
